criação da função de delete para o front-end e ajuste da função de chamada getNote

--- a/front-end/public/css/style.css
+++ b/front-end/public/css/style.css
@@ -1,7 +1,15 @@
+/*Imports*/
+
+
+
+/*Geral*/
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
 }
+
+
+/*Notes Container*/
 .note {
     border: 1px solid #ccc;
     padding: 15px;
