--- a/front-end/public/css/style.css
+++ b/front-end/public/css/style.css
@@ -1,28 +1,17 @@
 /*Imports*/
-
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css');
 
 
 /*Geral*/
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
+    margin: auto;
+    padding: 0;
 }
 
+*{
+    margin: auto;
+    padding: 0;
+}
 
-/*Notes Container*/
-.note {
-    border: 1px solid #ccc;
-    padding: 15px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-}
-.note h3 {
-    margin: 0;
-    font-size: 18px;
-}
-.note p {
-    margin: 10px 0;
-}
-.note small {
-    color: #555;
-}
