--- a/front-end/public/css/home.css
+++ b/front-end/public/css/home.css
@@ -10,126 +10,144 @@ textarea:focus,
     box-shadow: none !important;
     border-color: inherit !important;
 }
-
-
-/*Creat Notes Container*/
-#creat-note-container{
-    border-radius: 10px;
-    max-width: 500px;
-    padding: 10px;
-    border: 1px solid lightgray;
-}
-#creat-note-container *{
-    border: none;
-} 
-#note-title{
-    border-bottom: 1px solid lightgray;
-    border-radius: 0;
-}
-#note-title:focus{
-    border-color: lightgray !important;
-}
-#note-content{
-    resize: none;
+.btn-primary{
+    font-size: 14px;
 }
 
-/*Notes Container*/
-#notes-container{
-    max-width: 500px;
-}
-
-
-.note {
+/*Header Container*/
+header{
     background-color: white;
-    padding: 15px;
-    margin-bottom: 10px;
-    border-radius: 5px;
+    padding: 8px;
 }
-.note h3 {
-    margin: 0;
-    font-size: 18px;
+.header-nav li a{
+    color: black;
+    text-decoration: none;
+    padding: 5px 20px;
+    font-size: 14px;
 }
-.note p {
-    margin: 10px 0;
+#notestone-icon{
+    width: 14px;
+    margin-left: 0;
 }
-.note small {
-    color: #555;
+.header-centralize{
+    width: 500px;
 }
-
-
-
-
-
-/*///////////////////////////////////////////*/
-/* Estilo base das notas */
-.note {
-    margin: 10px;
-    padding: 10px;
-    background-color: white;
-    border: 1px solid lightgray;
-    border-radius: 8px;
- }
-
-/* Quando a nota entra em modo de edição */
-.note.edit-mode {
-    background-color: transparent;
-    border-color: transparent;
+#creat-user{
+    height: 30px;
+    padding-top: 5px;
 }
-.note.edit-mode *{
-    background-color: transparent;
-    border-color: transparent;
-    transition: 0s;
-    color: transparent;
-}
-/*criando o editor*/
-.note-editor{
-    background-color: white;
-    z-index: 100;
-    border-radius: 10px;
-    border: 1px solid lightgray;
-    padding: 10px;
-    transition: .3s;
-}
-.note-editor *{
+.banner-bkg{
+    background-color: rgb(241, 241, 241);
+    padding: 100px;
+    height: 400px;
     width: 100%;
-    display: block;
-    border: none;
 }
-.note-editor textarea{
-    resize: none;
-}
-.note-editor{
-    background-color: transparent;
-}
-.on-change-editor{
-    background-color: white;
-    left: 50% !important;
-    top: 20% !important;
-    width: 550px !important;
-    min-height: 270px;
 
-    transform: translate(-50%, -50%);    
+
+/*Container das notas*/
+.notes-container{
+    background-color: white;
+    min-width: 1200px;
+    height: 500px;
+    top: 80px;
+    left: 50%;
+    border-radius: 10px;
+    transform: translate(-50%);
+    margin: auto;
+    position: absolute;
+    display: flex;
 }
-.on-change-editor textarea{
-    min-height: 170px;
+.notes-nav-bar{
+    padding: 10px;
+    width: 300px;
+    margin: 0;
+    border-radius: 10px 0 0 10px;
+    border: 1.5px solid black;
 }
-/*criando o background escuro*/
-.black-bkg{
-    background-color: rgb(43, 44, 49);
-    opacity: .6;
-    z-index: 0;
-    width: 100vw;
-    height: 100vh;
-    left: 0;
-    top: 0;
-    
-    position: fixed;
-}
-.black-bkg.transparent{
-    transition: .4s;
+.note-content{
+    position: relative;
+    flex: 1;
+    margin: 0;
+    padding: 0px;
+    border-radius: 0 10px 10px 0px;
     background-color: transparent;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
 }
-.no-scroll {
-    overflow: hidden;
-    height: 100vh;
+
+
+        /*note content*/
+.note-banner{
+    background-color: var(--lightgray-color);
+    height: 100px;
+    width: 100%;
+    padding: 10px;
+    border-radius: 0 10px 0 0;
+    position: relative;
+    border: 1.5px solid black;
+    border-left: none;
+    border-bottom: none;
+}
+.note-text-content{
+    background-color: transparent;
+    padding: 10px;
+    flex: 1;
+    width: 100%;
+    border: 1.5px solid black;
+    border-radius: 0 0 10px 0;
+    border-left: none;
+    border-top: none;
+}
+.note-icon{
+    background-color: white;
+    padding: 10px;
+    width: 80px;
+    height: 80px;
+    border-radius: 5px;
+    border: 1px solid black;
+    position: absolute;
+    left: 10%;
+    top: 14%;
+}
+
+        /*lateral bar*/
+.header-lateral-bar{
+    display: flex;
+}
+.search-for{
+    display: flex;
+    margin-right: 10px;
+    position: relative;
+}
+.search-icon{
+    position: absolute;
+    width: 22px;
+    right: 5px;
+    top: 3px;
+}
+#search-note{
+    width: 100%;
+    background-color: var(--lightgray-color);
+    border: none;
+    padding-right: 30px;
+    font-size: 14px;
+    border: solid 1px transparent;
+}
+#search-note:focus{
+    border: 1.5px solid black !important;
+    background-color: transparent;
+    padding: ;
+}
+.header-lateral-bar input{
+    display: block;
+}
+.create-note{
+    background-color: transparent;
+    border: none;
+    margin: auto;
+    margin-right: 0;
+}
+.create-note img{
+    width: 27px;
 }
