--- a/front-end/public/css/style.css
+++ b/front-end/public/css/style.css
@@ -1,10 +1,18 @@
 /*Imports*/
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css');
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root{
+    --lightgray-color: rgb(231, 231, 231);
+}
 
 /*Geral*/
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Poppins", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
     margin: 20px;
     margin: auto;
     padding: 0;
@@ -14,4 +22,17 @@ body {
     margin: auto;
     padding: 0;
 }
+input{
+    padding: 3px 8px;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+input:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
 
+
+button{
+
+}
