adicionada section nova de notas e estruturação do front

--- a/front-end/public/css/style.css
+++ b/front-end/public/css/style.css
@@ -27,12 +27,8 @@ input{
     border-radius: 5px;
     box-sizing: border-box;
 }
-input:focus {
+.editable-body:focus, input:focus {
   outline: none !important;
   box-shadow: none !important;
 }
 
-
-button{
-
-}
