--- a/front-end/public/css/home.css
+++ b/front-end/public/css/home.css
@@ -78,6 +78,7 @@ header{
 
 
         /*note content*/
+
 .note-banner{
     background-color: var(--lightgray-color);
     height: 100px;
@@ -89,15 +90,16 @@ header{
     border-left: none;
     border-bottom: none;
 }
+
 .note-text-content{
-    background-color: transparent;
-    padding: 10px;
     flex: 1;
     width: 100%;
     border: 1.5px solid black;
     border-radius: 0 0 10px 0;
     border-left: none;
     border-top: none;
+    display: flex;
+    flex-direction: column;
 }
 .note-icon{
     background-color: white;
@@ -110,7 +112,40 @@ header{
     left: 10%;
     top: 14%;
 }
-
+.content-centralize{
+    height: 100%;
+    width: 85%;
+    flex-direction: column;
+    display: flex;
+}
+.title-note{
+    padding-left: 115px;
+    width: 100%;
+    margin-bottom: 10px;
+}
+.title-note input{
+    background-color: transparent;
+    border: none;
+    font-size: 28px;
+    font-weight: bold;
+    width: 100%;
+}
+.content-note{
+    flex: 1;
+    padding: 10px;
+    width: 100%;
+}
+.content-note:empty:before {
+  content: attr(data-placeholder);
+  color: gray;
+  pointer-events: none;
+  display: block;
+}
+.toolbar{
+    width: 100%;
+    border-top: 1px solid black;
+    padding: 5px;
+}
         /*lateral bar*/
 .header-lateral-bar{
     display: flex;
@@ -137,7 +172,6 @@ header{
 #search-note:focus{
     border: 1.5px solid black !important;
     background-color: transparent;
-    padding: ;
 }
 .header-lateral-bar input{
     display: block;
