--- a/front-end/assets/css/home.css
+++ b/front-end/assets/css/home.css
@@ -1,40 +1,18 @@
-
 /*imports*/
 
 
 /*Genericals*/
-input:focus,
-textarea:focus,
-.form-control:focus {
-    outline: none !important;
-    box-shadow: none !important;
-    border-color: inherit !important;
-}
 .btn-primary{
     font-size: 14px;
 }
-
-/*Header Container*/
-header{
-    background-color: white;
-    padding: 8px;
+.tools-btns{
+    background-color: transparent;
+    border: none;
+    padding: 0 10px;
+    font-size: 20px
 }
-.header-nav li a{
-    color: black;
-    text-decoration: none;
-    padding: 5px 20px;
-    font-size: 14px;
-}
-#notestone-icon{
-    width: 14px;
-    margin-left: 0;
-}
-.header-centralize{
-    width: 500px;
-}
-#creat-user{
-    height: 30px;
-    padding-top: 5px;
+.tools-btns img{
+    height: 25px;
 }
 .banner-bkg{
     background-color: rgb(241, 241, 241);
@@ -57,12 +35,15 @@ header{
     position: absolute;
     display: flex;
 }
-.notes-nav-bar{
+.left-sidebar{
     padding: 10px;
     width: 300px;
     margin: 0;
     border-radius: 10px 0 0 10px;
     border: 1.5px solid black;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 .note-content{
     position: relative;
@@ -71,9 +52,12 @@ header{
     padding: 0px;
     border-radius: 0 10px 10px 0px;
     background-color: transparent;
-    background-color: white;
+    padding: 0;
+    border: 1px solid black;
+    border-left: 0;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 }
 
 
@@ -81,12 +65,10 @@ header{
 
 .note-banner{
     background-color: var(--lightgray-color);
-    height: 100px;
+    min-height: 100px;
     width: 100%;
     padding: 10px;
-    border-radius: 0 10px 0 0;
     position: relative;
-    border: 1.5px solid black;
     border-left: none;
     border-bottom: none;
 }
@@ -94,7 +76,6 @@ header{
 .note-text-content{
     flex: 1;
     width: 100%;
-    border: 1.5px solid black;
     border-radius: 0 0 10px 0;
     border-left: none;
     border-top: none;
@@ -110,13 +91,14 @@ header{
     border: 1px solid black;
     position: absolute;
     left: 10%;
-    top: 14%;
+    top: 70%;
 }
 .content-centralize{
     height: 100%;
-    width: 85%;
+    width: 82%;
     flex-direction: column;
     display: flex;
+    margin-top: 10px;
 }
 .title-note{
     padding-left: 115px;
@@ -134,6 +116,9 @@ header{
     flex: 1;
     padding: 10px;
     width: 100%;
+    max-height: 100%;
+    overflow-y: auto;
+    margin-bottom: 45px;
 }
 .content-note:empty:before {
   content: attr(data-placeholder);
@@ -145,10 +130,21 @@ header{
     width: 100%;
     border-top: 1px solid black;
     padding: 5px;
-}
-        /*lateral bar*/
-.header-lateral-bar{
     display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: white;
+    position: sticky;
+    bottom: 0;
+}
+
+
+        /*lateral bar*/
+.header-sidebar{
+    display: flex;
+    border-bottom: 1px solid black;
+    padding-bottom: 20px;
 }
 .search-for{
     display: flex;
@@ -173,7 +169,7 @@ header{
     border: 1.5px solid black !important;
     background-color: transparent;
 }
-.header-lateral-bar input{
+.header-sidebar input{
     display: block;
 }
 .create-note{
@@ -184,4 +180,15 @@ header{
 }
 .create-note img{
     width: 27px;
+}
+.notes-list{
+    flex: 1;
+    width: 100%;
+    padding: 15px 10px;
+}
+.notes-list ul{
+    padding: 0;
+}
+.list-item{
+    list-style: none;
 }
