--- a/front-end/assets/css/sigin.css
+++ b/front-end/assets/css/sigin.css
@@ -1,17 +1,33 @@
 /*imports*/
-
-
-
 /*Login Container*/
 #signup-container{
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
     padding: 20px;
-    background: #f8f9fa;
+    background: white;
     border-radius: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border: 1px solid black;
     text-align: center;
     margin-top: 100px; /* Para afastar do topo */
+}
+#signup-container input{
+    background-color: var(--lightgray-color);
+    padding: 2px 10px;
+    border-radius: 3px;
+    font-size: 14px;
+
+}
+#signup-container  a{
+    color: rgb(0, 140, 255);
+    text-align: left;
+    display: block;
+    margin-left: 0;
+    font-size: 12px;
+}
+#login{
+    margin-top: 15px;
+    background-color: black;
+    border: none;
 }
 
 /*==========*/
