adicionada getbyID no front; imprimindo indicies no sidebar; preenchendo dados correspondentes ao indicie na note-content

--- a/front-end/assets/css/home.css
+++ b/front-end/assets/css/home.css
@@ -179,4 +179,10 @@
 }
 .list-item{
     list-style: none;
+    padding: 8px;
+    padding-left: 0;
+    cursor: pointer;
+}
+#teste-btn:focus{
+    background-color: lightcoral;
 }
