--- a/front-end/assets/css/home.css
+++ b/front-end/assets/css/home.css
@@ -2,9 +2,11 @@
 
 
 /*Genericals*/
-.btn-primary{
-    font-size: 14px;
+body{
+    
 }
+
+
 .tools-btns{
     background-color: transparent;
     border: none;
@@ -15,7 +17,7 @@
     height: 25px;
 }
 .banner-bkg{
-    background-color: rgb(241, 241, 241);
+    background-color: var(--lightgray-color);
     padding: 100px;
     height: 400px;
     width: 100%;
@@ -24,47 +26,35 @@
 
 /*Container das notas*/
 .notes-container{
-    background-color: white;
-    min-width: 1200px;
-    height: 500px;
-    top: 80px;
-    left: 50%;
-    border-radius: 10px;
-    transform: translate(-50%);
-    margin: auto;
-    position: absolute;
-    display: flex;
-}
-.left-sidebar{
+    background-color: var(--body-color);
     padding: 10px;
-    width: 300px;
-    margin: 0;
-    border-radius: 10px 0 0 10px;
-    border: 1.5px solid black;
-    display: flex;
-    flex-direction: column;
-    position: relative;
+    padding-top: 20px;
+    width: calc(100% - 255px);
+    height: 100vh;
+    margin-right: 0;
+    box-sizing: border-box;
 }
+
 .note-content{
-    position: relative;
-    flex: 1;
+    position: absolute;
+    width: calc(100% - 300px);
+    min-height: 90vh;
     margin: 0;
     padding: 0px;
-    border-radius: 0 10px 10px 0px;
-    background-color: transparent;
+    border-radius: 10px;
     padding: 0;
-    border: 1px solid black;
-    border-left: 0;
+    border: 1px solid var(--border-color);
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    background-color: var(--box-color);
 }
 
 
         /*note content*/
 
 .note-banner{
-    background-color: var(--lightgray-color);
+    background-color: var(--body-color);
     min-height: 100px;
     width: 100%;
     padding: 10px;
@@ -84,10 +74,13 @@
 }
 .content-centralize{
     height: 100%;
-    width: 82%;
+    width: 900px;
     flex-direction: column;
     display: flex;
     margin-top: 10px;
+}
+.content-centralize form{
+    margin: 0;
 }
 .title-note{
     width: 100%;
@@ -96,9 +89,12 @@
 .title-note input{
     background-color: transparent;
     border: none;
-    font-size: 28px;
+    font-size: 32px;
     font-weight: bold;
     width: 100%;
+}
+.title-note input::placeholder{
+    color: var(--lightgray-color);
 }
 .content-note{
     flex: 1;
@@ -109,70 +105,74 @@
     margin-bottom: 45px;
 }
 .content-note:empty:before {
-  content: attr(data-placeholder);
-  color: gray;
-  pointer-events: none;
-  display: block;
+    content: attr(data-placeholder);
+    color: var(--lightgray-color);
+    pointer-events: none;
+    display: block;
 }
 .toolbar{
     width: 100%;
-    border-top: 1px solid black;
+    margin-bottom: 30px;
+}
+.toolbar-wrap{
+    border: 1px solid var(--border-color);
     padding: 5px;
-    display: flex;
+    background-color: transparent;
+    width: 900px;
+    display: flex;  
     justify-content: center;
     align-items: center;
-
-    background-color: white;
-    position: sticky;
-    bottom: 0;
+    border-radius: 5px;
 }
 
 
         /*lateral bar*/
-.header-sidebar{
-    display: flex;
-    border-bottom: 1px solid black;
-    padding-bottom: 20px;
-}
 .search-for{
+    width: 100%;
     display: flex;
     margin-right: 10px;
     position: relative;
 }
-.search-icon{
-    position: absolute;
-    width: 21px;
-    right: 5px;
-    top: 1px;
-}
 #search-note{
     width: 100%;
-    background-color: var(--lightgray-color);
-    border: none;
+    background-color: transparent;
+    padding: 7px;
     padding-right: 30px;
     font-size: 14px;
-    border: solid 1px transparent;
+    border: solid 1px var(--border-color);
 }
-#search-note:focus{
-    border: 1.5px solid black !important;
-    background-color: transparent;
+#search-note::placeholder{
+    color: var(--lightgray-color);
 }
-.header-sidebar input{
-    display: block;
+.search-icon{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    right: 5px;
+    top: 5px;
 }
+#search-note:focus, #search-note:hover{
+    border: 1.5px solid white;
+}
+
 .create-note{
-    background-color: transparent;
-    border: none;
-    margin: auto;
-    margin-right: 0;
+    text-align: left;
+    margin-bottom: 20px;
+    width: 100%;
+    display: flex;
+    align-items: center;     /* centraliza verticalmente */
+    font-weight: bold;
+    color: white;
 }
 .create-note img{
-    width: 27px;
+    height: 25px;
+    display: block;
+    margin-right: 0;
 }
 .notes-list{
     flex: 1;
     width: 100%;
-    padding: 15px 10px;
+    padding: 15px 0px;
 }
 .notes-list ul{
     padding: 0;
@@ -180,9 +180,18 @@
 .list-item{
     list-style: none;
     padding: 8px;
-    padding-left: 0;
+    padding-left: 5px;
     cursor: pointer;
+    border-radius: 3px;
 }
-#teste-btn:focus{
-    background-color: lightcoral;
+.list-item:hover{
+    background-color: var(--border-color);
+}
+
+/*Div de anuncios*/
+.ads{
+    padding: 10px;
+    width: 100%;
+    height: 200px;
+    border-top: solid 1px var(--border-color);
 }
