--- a/front-end/assets/css/style.css
+++ b/front-end/assets/css/style.css
@@ -5,29 +5,12 @@
 
 :root{
     --lightgray-color: rgb(231, 231, 231);
+    --body-color: #080813;
+    --border-color: #5D5DA3;
+    --primary-color: #8686FF;
+    --box-color: #1a1a31;
 }
-/*Header*/
-/*Header Container*/
-header{
-    background-color: white;
-    padding: 8px;
-}
-.header-nav li a{
-    color: black;
-    text-decoration: none;
-    padding: 5px 20px;
-    font-size: 14px;
-}
-header img{
-    width: 20px;
-}
-#notestone-icon{
-    width: 14px;
-    margin-left: 0;
-}
-.header-centralize{
-    width: 500px;
-}
+
 /*Geral*/
 body {
     font-family: "Poppins", sans-serif;
@@ -35,16 +18,25 @@ body {
     font-style: normal;
     font-variation-settings: "wdth" 100;
     height: 100%;
+    background-color: var(--body-color);
 }
 
 *{
     margin: auto;
     padding: 0;
+    color: white;
 }
 input{
     padding: 3px 8px;
     border-radius: 5px;
     box-sizing: border-box;
+}
+button{
+    background-color: var(--primary-color);
+    padding: 7px 10px;
+    border-radius: 5px;
+    border-color: transparent;
+    color: black;
 }
 .editable-body ,input:focus {
   outline: none !important;
@@ -62,4 +54,56 @@ input{
   border: 3px solid transparent;
   border-left: 4px solid transparent; 
   background-clip: content-box;
+}
+
+
+
+
+/*Header*/
+/*Header Container*/
+header{
+    background-color: gray;
+    position: fixed;
+    left: 0;
+    height: 100vh;
+    padding: 15px;
+    background-color: var(--body-color);
+}
+
+.header-nav{
+    padding: 0;
+    padding-bottom: 20px;
+    list-style: none;
+    border-bottom: 1px solid var(--border-color);
+}
+.header-nav li a{
+    display: block;
+    color: black;
+    text-decoration: none;
+    padding: 5px 20px;
+    font-size: 16px;    
+    color: white;
+}
+.header-nav li a:hover{
+    background-color: var(--border-color);
+}
+.header-nav li:first-child a{
+    padding-left: 0;
+    padding-bottom: 20px;
+}
+.header-nav li:first-child a:hover{
+    background-color: transparent;
+}
+header svg{
+    width: 15px;
+}
+header img{
+    height: 40px;
+}
+.icooon{
+    color: red;
+}
+#notestone-icon{
+    width: 14px;
+    margin-left: 0;
 }
