--- a/front-end/assets/css/style.css
+++ b/front-end/assets/css/style.css
@@ -66,6 +66,7 @@ header{
     position: fixed;
     left: 0;
     height: 100vh;
+    width: 260px !important;
     padding: 15px;
     background-color: var(--body-color);
 }
