--- a/front-end/assets/css/home.css
+++ b/front-end/assets/css/home.css
@@ -57,6 +57,7 @@ body{
     min-height: 100px;
     width: 100%;
     padding: 10px;
+    border-radius: 10px 10px 0 0;
     position: relative;
     border-left: none;
     border-bottom: none;
